--- a/src/ui/substance/filter/style.css
+++ b/src/ui/substance/filter/style.css
@@ -1,8 +1,6 @@
 .filter {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  > div:last-child {
+
+  .reset {
     padding: var(--padding-s);
   }
 }
